# hkust-fuel-ipp-ros2

./: .clangd  .gitignore  404.html  GEMINI.md  MIGRATION_STATUS.md  PORTING_PROGRESS.md  README.md  SOURCE_MIGRATION_GUIDE.md  STEP_BY_STEP_MIGRATION_PLAN.md  STEP_BY_STEP_MIGRATION_PLAN_UPDATE.md  index.html  mkdocs.yml  search.html
.devcontainer/: .env.example  Dockerfile  README.md  devcontainer.json  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  setup.sh
.github/workflows/: ci.yml  code_lint.yml  docs.yml  ros2-check.yaml
docs/: README.md
docs/javascripts/: mathjax.js
docs/plan/: autonomous_exploration.md  multi_map_server_port.md  plan_manage_porting_plan.md  poly_traj_step2_plan.md  (+3 more)
fuel_planner/plan_env/: CMakeLists.txt  package.xml
javascripts/: mathjax.js
search/: search_index.json
src/fuel_planner/active_perception/: CMakeLists.txt
src/fuel_planner/active_perception/include/active_perception/: frontier_finder.h  heading_planner.h  perception_utils.h  traj_visibility.h
src/fuel_planner/active_perception/src/: frontier_finder.cpp  heading_planner.cpp  perception_utils.cpp  traj_visibility.cpp
src/fuel_planner/bspline/: CMakeLists.txt  package.xml
src/fuel_planner/bspline/msg/: Bspline.msg
src/fuel_planner/bspline/src/: non_uniform_bspline.cpp
src/fuel_planner/bspline_opt/: CMakeLists.txt  package.xml
src/fuel_planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
src/fuel_planner/bspline_opt/src/: bspline_optimizer.cpp
src/fuel_planner/exploration_manager/: CMakeLists.txt  package.xml
src/fuel_planner/exploration_manager/config/: exploration.yaml
src/fuel_planner/exploration_manager/include/exploration_manager/: expl_data.h  fast_exploration_fsm.h  fast_exploration_manager.h
src/fuel_planner/exploration_manager/src/: fast_exploration_fsm.cpp  fast_exploration_manager.cpp
src/fuel_planner/exploration_manager/test/: load_obj.cpp  write_tsp.cpp
src/fuel_planner/path_searching/: CMakeLists.txt  package.xml
src/fuel_planner/path_searching/include/path_searching/: astar.h  astar2.h  kinodynamic_astar.h  topo_prm.h
src/fuel_planner/path_searching/src/: astar.cpp  astar2.cpp  kinodynamic_astar.cpp  topo_prm.cpp
src/fuel_planner/plan_bringup/: package.xml  setup.cfg  setup.py
src/fuel_planner/plan_bringup/config/: mppi.yaml  mppi_acc.yaml  mppi_tq.yaml  plotjuggler_mppi.xml
src/fuel_planner/plan_bringup/launch/: exploration.launch.py  fast_planner.launch.py  fuel_pipeline.launch.py  simulator.launch.py  so3_test.launch.py  traj_generator.launch.py  traj_server.launch.py
src/fuel_planner/plan_bringup/plan_bringup/: __init__.py  exploration_supervisor.py
src/fuel_planner/plan_env/: CMakeLists.txt  package.xml
src/fuel_planner/plan_env/include/plan_env/: map_ros.h  obj_predictor.h  sdf_map.h
src/fuel_planner/plan_env/src/: map_ros.cpp  obj_generator.cpp  obj_predictor.cpp  sdf_map.cpp
src/fuel_planner/plan_manage/: CMakeLists.txt  package.xml
src/fuel_planner/plan_manage/config/: fast_planner.yaml  traj.rviz  traj_server.yaml  traj_viz_dev.rviz
src/fuel_planner/plan_manage/include/plan_manage/: kino_replan_fsm.h  local_explore_fsm.h  plan_container.hpp  planner_manager.h  topo_replan_fsm.h
src/fuel_planner/plan_manage/launch/: fast_planner.launch.py  traj_server.launch.py
src/fuel_planner/plan_manage/src/: fast_planner_node.cpp  kino_replan_fsm.cpp  planner_manager.cpp  planner_manager_dev.cpp  topo_replan_fsm.cpp  traj_server.cpp  traj_server_backup.cpp
src/fuel_planner/plan_manage/test/: compare_topo.cpp  local_explore_fsm.cpp  opti_node.cpp  pos_vel_acc.cpp  process_msg.cpp  process_msg2.cpp  rotation.cpp  test_collision_cost.cpp
src/fuel_planner/poly_traj/: CMakeLists.txt  README.md  package.xml
src/fuel_planner/poly_traj/config/: traj_generator_sim.yaml
src/fuel_planner/poly_traj/include/poly_traj/: polynomial_traj.h  traj_generator_node.hpp
src/fuel_planner/poly_traj/src/: traj_generator.cpp  traj_generator_node.cpp
src/fuel_planner/poly_traj/test/: traj_generator_test.cpp
src/fuel_planner/swarmtal_msgs/: CMakeLists.txt  package.xml
src/fuel_planner/swarmtal_msgs/msg/: DroneOnboardCommand.msg
src/fuel_planner/traj_utils/: CMakeLists.txt  package.xml
src/fuel_planner/traj_utils/include/traj_utils/: planning_visualization.h
src/fuel_planner/traj_utils/src/: circle_publisher.cpp  planning_visualization.cpp  process_msg.cpp
src/i_mppi/mppi_control/: CMakeLists.txt  mppi_control_component.xml  package.xml
src/i_mppi/mppi_control/include/mppi_control/: mppi_acc_node.hpp  mppi_common.hpp  mppi_control_node.hpp  mppi_node_base.hpp  mppi_tq_node.hpp  mppi_utils.cuh  utils.hpp
src/i_mppi/mppi_control/src/: mppi_acc_kernels.cu  mppi_acc_node.cpp  mppi_control_node.cpp  mppi_kernels.cu  mppi_node_base.cpp  mppi_tq_kernels.cu  mppi_tq_node.cpp
src/uav_simulator/local_sensing/: CMakeLists.txt  package.xml
src/uav_simulator/local_sensing/src/: depth_render.cu  depth_render_node.cpp  euroc.cpp  pcl_render_node.cpp  pointcloud_render_node.cpp
src/uav_simulator/map_generator/: CMakeLists.txt  package.xml
src/uav_simulator/map_generator/src/: click_map.cpp  empty_world.cpp  map_publisher.cpp  map_recorder.cpp  random_forest_sensing.cpp
src/uav_simulator/poscmd_2_odom/: CMakeLists.txt  package.xml
src/uav_simulator/poscmd_2_odom/src/: poscmd_2_odom.cpp
src/uav_simulator/so3_control/: CMakeLists.txt  package.xml
src/uav_simulator/so3_control/src/: so3_control_component.cpp  so3_control_nodelet.cpp
src/uav_simulator/so3_disturbance_generator/: CMakeLists.txt  package.xml
src/uav_simulator/so3_disturbance_generator/src/: so3_disturbance_generator.cpp
src/uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt  package.xml
src/uav_simulator/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
src/uav_simulator/so3_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
uav_simulator/local_sensing/: package.xml
uav_simulator/so3_control/: CMakeLists.txt  package.xml  so3_control_component.xml
uav_simulator/so3_control/src/: SO3Control.cpp
wiki/: index.html
(+142 files in other folders)
