<?xml version="1.0"?>
<package format="3">
  <name>exploration_manager</name>
  <version>0.0.0</version>
  <description>The fast_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/fast_planner</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>rclcpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>rclcpp</build_depend> -->
  <!--   <exec_depend>rclcpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--    -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>ament_cmake</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--    -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>plan_env</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>bspline</build_depend>
  <build_depend>bspline_opt</build_depend>
  <build_depend>active_perception</build_depend>
  <build_depend>traj_utils</build_depend>
  <build_depend>lkh_tsp_solver</build_depend>
  <build_depend>plan_manage</build_depend>
  <build_depend>quadrotor_msgs</build_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>plan_env</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>bspline</exec_depend>
  <exec_depend>bspline_opt</exec_depend>
  <exec_depend>active_perception</exec_depend>
  <exec_depend>traj_utils</exec_depend>
  <exec_depend>lkh_tsp_solver</exec_depend>
  <exec_depend>plan_manage</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
