<?xml version="1.0"?>
<package format="3">
  <name>plan_bringup</name>
  <version>0.0.0</version>
  <description>Bringup launch files for the FUEL planning stack.</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>plan_manage</depend>
  <depend>poly_traj</depend>
  <depend>waypoint_generator</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
