[metadata]
name = plan_bringup
version = 0.0.0
description = Bringup launch files for the FUEL planners
license = TODO
author = bzhouai
author_email = bzhouai@todo.todo

[options]
packages = find:
zip_safe = True
install_requires =
  setuptools
  launch
  launch_ros

[options.package_data]
plan_bringup =
  launch/*.py
  resource/plan_bringup

[options.data_files]
share/ament_index/resource_index/packages/plan_bringup =
  resource/plan_bringup
share/plan_bringup/package.xml =
  package.xml
share/plan_bringup/plan_bringup =
  resource/plan_bringup
