[metadata]
name = plan_bringup
version = 0.0.0
description = Bringup launch files for the FUEL planners
license = TODO
author = bzhouai
author_email = bzhouai@todo.todo

[options]
packages = find:
zip_safe = True
install_requires =
  setuptools
  launch
  launch_ros

[options.package_data]
plan_bringup =
  resource/plan_bringup

[options.data_files]
share/ament_index/resource_index/packages =
  resource/plan_bringup
share/plan_bringup =
  package.xml
share/plan_bringup/launch =
  launch/fast_planner.launch.py
  launch/traj_generator.launch.py
  launch/traj_server.launch.py
  launch/simulator.launch.py
  launch/so3_test.launch.py